		need to remove 1 pgm entry bkpt limitation
	- [kevin] $1079: don't start the engine when toggling "Restrict to actual speed" if it was stopped (crash fix).
	- [roms]  $1081: TiEmu hang when using F10 instead of popup menu. Fixed.
	- [roms]  $1082: use ShellExecute instead of g_spawn_async in go_to_bookmark (thx Kevin !).
	- [roms]  $1084: use a list of browsers to get the good one under Linux

- 19/03/2005, version 1.80q:
	- [roms] $985: updated copyright notice.
	- [roms] $990: set main window title (for TIGCC-IDE).
	- [roms] $993: switched to GTK+ 2.6.4 for Windows.
	- [roms] $994: removed GTK deprecated code (-DGTK_DISABLE_DEPRECATED),
	         except for comm.c
	- [roms] $996: set default filename in file selectors
	- [roms] $997: more dissassembled lines of code in the debugger 
	         (resizeable).
	- [roms] $998: close the debugger when you press F5.
	- [roms] $1001: added scaling support for skin & lcd 
	         (beware: CPU intensive).
	- [roms] $1002: can send several TI files at once and added 
	         new file selectors.
	- [roms] $1008: implemented full-screen view.
	- [roms] $1009: improved CPU responsiveness of large view mode.
	- [roms] $1015: TiEmu don't use threads any longer.

- 12/03/2005, version 1.80p:
	- [kevin] $933: increased link timeout from 1.5 to 10s.
	- [kevin] $934: fixed grayscale support.
	- [kevin] $935: fixed grayscale support with double buffering.
	- [kevin] $937: allow building with -mwindows -D_WINDOWS on MinGW.
	- [roms]  $940: removed mutex at startup because we should be able to run 
		2 instances of TiEmu for virtual linking.
	- [roms]  $941: fixed ghost of RAM in $100000 on TI89,92,92+,V200.
	- [roms]  $943: fixed ghost of RAM in $000000 on Tinanium
	- [roms]  $949: fixed timer incrementing/reloading (PPhd: loop freeze)
	- [roms]  $950: can send all of 89?, 92?, 9x? and v2? to all the models
	- [roms]  $951: clean-up in ti68k_scan_images (no more cache, useless now)