@@ -87,7 +87,7 @@ Define the calculator state image to load at startup.
 Give the number of instructions executed by the M68000 per 30ms timeslice. Default value is -1 (50000 insts/30ms).
 
 \fBhw_rate=\fP
-Give the OS2/OSC3 oscillator rate. Default value is -1 (625 on hw1 and 1172 on hw2; OSC2 is incremented every 6250 OSC1 cycles).
+Give the OS2/OSC3 oscillator rate. Default value is -1 (427 on hw1 and 732 on hw2; OSC2 is incremented every 6250 OSC1 cycles).
 
 \fBlcd_rate=\fP
 Define the frame rate of LCD refresh. Default value is -1 (25ms => 40fps). Don't use a value smaller than 10ms.
